test: remove usage of `List.getFirst()`